add username to user

--- a/njit/views/layout.jade
+++ b/njit/views/layout.jade
@@ -8,8 +8,7 @@ html
   header.navbar.navbar-inverse
     .container-fluid.col-md-6
       .navbar-header
-        a#logo.navbar-brand(href='#') NJIT
-
+        a#logo.navbar-brand(href='/') NJIT
       ul.nav.navbar-nav
         li#navs.active Home
         li#navs
