--- a/njit/views/index.jade
+++ b/njit/views/index.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-div.jumbotron
-  h1 Welcome to njitblog!
-  div.container
-      
-    
+  .container.jumbotron
+    h1 Welcome to njitblog!
+
+
 
